--- a/singleWebView/Base.lproj/Main.storyboard
+++ b/singleWebView/Base.lproj/Main.storyboard
@@ -25,11 +25,27 @@
                                 <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                 <animations/>
                                 <items>
-                                    <barButtonItem systemItem="refresh" id="qm3-r2-AK9"/>
-                                    <barButtonItem systemItem="stop" id="Lwq-cc-Tec"/>
+                                    <barButtonItem systemItem="refresh" id="qm3-r2-AK9">
+                                        <connections>
+                                            <action selector="doRefresh:" destination="vXZ-lx-hvc" id="nnp-Ap-38p"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="stop" id="Lwq-cc-Tec">
+                                        <connections>
+                                            <action selector="stop:" destination="vXZ-lx-hvc" id="QXq-Eb-1PE"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Cfb-GH-cYS"/>
-                                    <barButtonItem systemItem="rewind" id="MeB-gh-tnk"/>
-                                    <barButtonItem systemItem="fastForward" id="mjg-v1-3dA"/>
+                                    <barButtonItem systemItem="rewind" id="MeB-gh-tnk">
+                                        <connections>
+                                            <action selector="goBack:" destination="vXZ-lx-hvc" id="P4J-Fv-ziH"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="fastForward" id="mjg-v1-3dA">
+                                        <connections>
+                                            <action selector="goForward:" destination="vXZ-lx-hvc" id="a9l-f3-8k3"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
