--- a/singleWebView/Base.lproj/Main.storyboard
+++ b/singleWebView/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15A178w" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fQv-yX-h6s">
+                            <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fQv-yX-h6s">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -52,11 +53,15 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="fQv-yX-h6s" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-15" id="8rG-5F-fbL"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="fQv-yX-h6s" secondAttribute="bottom" constant="1" id="B5E-FE-Eep"/>
                             <constraint firstItem="vpR-oV-Iyv" firstAttribute="trailing" secondItem="fQv-yX-h6s" secondAttribute="trailing" id="BBY-2o-yb0"/>
                             <constraint firstItem="vpR-oV-Iyv" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="JbD-FL-tFX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fQv-yX-h6s" secondAttribute="trailing" constant="-15" id="PZx-OS-mt6"/>
                             <constraint firstAttribute="trailing" secondItem="vpR-oV-Iyv" secondAttribute="trailing" id="UAU-Nr-WH9"/>
                             <constraint firstItem="vpR-oV-Iyv" firstAttribute="bottom" secondItem="fQv-yX-h6s" secondAttribute="bottom" id="aIa-Xz-GFV"/>
                             <constraint firstItem="vpR-oV-Iyv" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="fBq-W1-tiu"/>
+                            <constraint firstItem="fQv-yX-h6s" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="1" id="lAh-oa-TFF"/>
                             <constraint firstItem="vpR-oV-Iyv" firstAttribute="leading" secondItem="fQv-yX-h6s" secondAttribute="leading" id="ykc-L9-afz"/>
                         </constraints>
                     </view>
